--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.9.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-star-ratings": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +36,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pin-ops/React-My-Portfolio.git"
+  },
+  "author": "Pinar",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Pin-ops/React-My-Portfolio/issues"
+  },
+  "homepage": "https://github.com/Pin-ops/React-My-Portfolio#readme"
 }
